first code transfer